--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     
                 <div class="rodape-fix">
                     <footer>
-                        <p><a href="#"><i class="fas fa-shopping-cart"></i> Meu pedido</a></p>
-                        <p><a href="#"><i class="fas fa-user"></i> Perfil</a></p>
+                        <p><a href="#"><i class="fa fa-home"></i> Inicio</a></p>
                         <p><a href="#"><i class="fas fa-book"></i> Cardápio</a></p>
                         <p><a href="#"><i class="fas fa-cart-arrow-down"></i> Carrinho</a></p>
                       </footer>
